--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>Project1</title>
+    <title>Login</title>
 </head>
 <style>
     :root {
@@ -132,6 +132,6 @@
           <button class="secondary-button signup-button">Sign Up</button>
 
         </div>
-      </div>
+    </div>
 </body>
 </html>
